--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
             <version>4.1.0</version>
         </dependency>
         <dependency>
+            <groupId>gr.spinellis</groupId>
+            <artifactId>ckjm</artifactId>
+            <version>1.9</version>
+        </dependency>
+        <dependency>
             <groupId>org.eclipse.jgit</groupId>
             <artifactId>org.eclipse.jgit</artifactId>
             <version>5.6.0.201912101111-r</version>
